@@ -19,7 +19,7 @@
 
 Name:           publican
 Version:        4.1.9
-Release:        0%{?dist}.t5
+Release:        0%{?dist}.t9
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
