@@ -15,6 +15,7 @@
 - Remove newline after cdata. BZ #1110611
 - Add Markdown output. BZ #1120455
 - Bump Syntax::Highlight::Engine::Kate dep to 0.09.
+- Add external link support. BZ #1123193
 
 4.1.5 Wed Jul 09 2014
 - Add some web UI tranlstaion strings & sort formats. BZ #1117081
